Histogram of policies added

--- a/Regression_final.ipynb
+++ b/Regression_final.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 249,
+      "execution_count": null,
       "id": "d49b6834",
       "metadata": {
         "id": "d49b6834"
@@ -39,7 +39,7 @@
         "outputId": "95f7f30b-481e-44e9-d541-ed79b7dee5af"
       },
       "id": "3y9lGghrA_6v",
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 235,
+      "execution_count": null,
       "id": "86897035",
       "metadata": {
         "id": "86897035"
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 236,
+      "execution_count": null,
       "id": "e38e7005",
       "metadata": {
         "id": "e38e7005",
@@ -711,7 +711,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 247,
+      "execution_count": null,
       "id": "1df029c1",
       "metadata": {
         "colab": {
@@ -1241,20 +1241,20 @@
         "id": "92m5p9QTIcyV"
       },
       "id": "92m5p9QTIcyV",
-      "execution_count": 238,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 239,
+      "execution_count": null,
       "id": "65edaf8a",
       "metadata": {
         "id": "65edaf8a",
-        "outputId": "f4e8ae05-71ed-4f4e-a5d3-5407d87d8439",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "f4e8ae05-71ed-4f4e-a5d3-5407d87d8439"
       },
       "outputs": [
         {
@@ -2308,7 +2308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 240,
+      "execution_count": null,
       "id": "56c819ec",
       "metadata": {
         "id": "56c819ec",
@@ -3512,7 +3512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 241,
+      "execution_count": null,
       "id": "37e07bb0",
       "metadata": {
         "colab": {
@@ -3598,7 +3598,7 @@
         "id": "5jEfWSN9AjiT"
       },
       "id": "5jEfWSN9AjiT",
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3618,14 +3618,14 @@
       ],
       "metadata": {
         "id": "Zb3yA3qFnyco",
-        "outputId": "8192d1b5-83f8-424a-bcce-2a3304c93342",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "8192d1b5-83f8-424a-bcce-2a3304c93342"
       },
       "id": "Zb3yA3qFnyco",
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4944,7 +4944,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 262,
+      "execution_count": null,
       "id": "40ac6532",
       "metadata": {
         "scrolled": true,
@@ -5129,7 +5129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 263,
+      "execution_count": null,
       "id": "39f12015",
       "metadata": {
         "colab": {
@@ -5216,7 +5216,48 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "df0 = df.copy()\n",
+        "df = df[df['Residents.Initiated'].notna()]\n",
+        "\n",
+        "# List of columns to plot\n",
+        "columns_to_plot = [\n",
+        "    'Non-Incarcerated \\n Coverage',\n",
+        "    'Decarceration',\n",
+        "    'Incentive',\n",
+        "    'Days \\n Prioritized'\n",
+        "]\n",
+        "\n",
+        "# Create the subplots\n",
+        "fig, axes = plt.subplots(2, 2, figsize=(12, 10))\n",
+        "axes = axes.flatten()\n",
+        "\n",
+        "# Loop through each column and plot the histogram or bar chart\n",
+        "for idx, col in enumerate(columns_to_plot):\n",
+        "    ax = axes[idx]\n",
+        "    data = df[col].dropna()\n",
+        "\n",
+        "    if col == 'Incentive':\n",
+        "        # For the Incentive column (binary data), use a bar chart\n",
+        "        ax.bar(['No', 'Yes'], data.value_counts(), color='plum', edgecolor='black')\n",
+        "        ax.set_xlabel('Incentive', fontsize=12)\n",
+        "    else:\n",
+        "        ax.hist(data, bins=5, color='plum', edgecolor='black')\n",
+        "\n",
+        "    ax.set_xlabel(col, fontsize=12)\n",
+        "    ax.set_ylabel('Frequency', fontsize=12)\n",
+        "\n",
+        "    # Add lettering\n",
+        "    ax.text(-0.25, 1.1, f'({chr(65 + idx)})', transform=ax.transAxes,\n",
+        "        fontsize=25,  va='top')\n",
+        "\n",
+        "# Adjust layout\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "fig.savefig(wd + '/Policy_hist.jpg')\n",
+        "df = df0"
+      ],
       "metadata": {
         "id": "zgvzSZiS_2s3"
       },
